starts to implement a redis based cache, finishes the wrapper including following next pointers to scrape everything, finishes building all histo data, fixes top lists not showing the proper order

--- a/account/static/css/base.css
+++ b/account/static/css/base.css
@@ -573,6 +573,7 @@ canvas {
         sans-serif;
     font-weight: normal;
     vertical-align: middle;
+    margin-bottom: 5px;
 }
 
 .dropbtn {
@@ -588,6 +589,7 @@ canvas {
     position: relative;
     margin-right: 15px;
     margin-bottom: 15px;
+    margin-top: -42px;
 }
 
 .dropdown-content {
